# ptcg_pk

./: .env.example  .gitignore  FELIX_NOTE.md  Makefile  README.md  add_render_go.py  fix_select.py  fix_supabase.py  fix_ui.py  fix_ui_2.py  fix_ui_react_vars.py  fix_ui_resize.py  fix_ui_resize_logic.py  get_tile.py  index.html  index_dice.html  metadata.json  package-lock.json  package.json  patch_backend.diff  patch_scene_editor.diff  patch_scene_editor_img.cjs  patch_scene_editor_img.diff  patch_script.cjs  patch_template_creator.diff  plan.md  plan.txt  plan2.txt  plan3.txt  playwright.config.ts  pyproject.toml  refactor_rpg_mode.py  refactor_ui.py  requirements.txt  requirements_dev.txt  server.ts  setup.py  test_db.py  test_db3.py  test_empty.js  (+7 more)
DEPLOY/: ptcg_pk.service
backend/: gemini_utils.py  main.py  socket_app.py
changes/: 20260318-2038_bot_create_python_env_20260318-1239_00000002.md  20260323-0754_UI_MonsterBattleTurnBased_20260323-0004_514.md  20260323-1001_frontend_balanced_monsters_and_responsive_ui_20260323-1100_515.md  20260323-1927_backend_integrate_supabase_for_team_records_20260323-1927_517.md  20260324-0813_feature_support_oauth_20260324-0813_518.md  20260325-0825_bot_debug_remote_git_repo_via_ssh_20260325-0026_519.md  20260325-2039_backend_tech_stack_refactor_oauth_fastapi_20260325-2039_520.md  20260326-1828_DB_integrate_supabase_20260326-1828_00000524.md  20260326-2114_UI_IntegrateRpgMode_20260326-2114_00000525.md  20260327-1039_frontend_FixRpgModeTypeScriptErrors_20260327-1039_00000526.md  20260327-2012_UI_optimize-rpg-ui_20260327-1222_535.md  (+116 more)
(+122 files in other folders)
