[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "monster-battle-backend"
version = "1.0.0"
description = "FastAPI backend for Monster Battle game"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "python-socketio>=5.11.0",
    "python-dotenv>=1.0.1",
    "httpx>=0.27.0",
    "asteval>=1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.hatch.build.targets.wheel.shared-data]
"dist" = "share/dist"
